package com.primefuel.fulltank.platform.ordering.domain.model.commands;

public record CancelFuelOrderCommand(Long orderId) {
}
