package com.primefuel.fulltank.platform.ordering.domain.model.commands;

public record ConfirmFuelOrderCommand(Long orderId) {
}
