package com.primefuel.fulltank.platform.ordering.domain.model.queries;

public record GetFuelOrdersByCompanyIdQuery(Long companyId) {
}
