package com.primefuel.fulltank.platform.ordering.domain.model.queries;

public record GetFuelOrdersByProviderIdQuery(Long providerId) {
}
