package com.primefuel.fulltank.platform.ordering.domain.model.valueobjects;

public enum RequestStatus {
    PENDING,
    APPROVED,
    REJECTED
}
