package com.primefuel.fulltank.platform.ordering.interfaces.rest;

public class OrderingController {
}
