package com.primefuel.fulltank.platform.ordering.interfaces.rest.resources;

public record RejectFuelRequestResource(String reason) {
}
